--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "dependencies": {
     "apollo-server": "^3.12.0",
     "apollo-server-express": "^3.12.0",
+    "autoprefixer": "^10.4.15",
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.4",
+    "postcss": "^8.4.28",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
   }
