--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.8.1",
+    "@stripe/stripe-js": "^2.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +15,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "reducer": "^0.19.2",
+    "stripe": "^13.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
