--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "^5.0.1"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^2.1.0",
     "apollo-server": "^3.12.0",
     "apollo-server-express": "^3.12.0",
     "autoprefixer": "^10.4.15",
