--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.9",
     "i": "^0.3.7",
+    "jwt-decode": "^3.1.2",
     "npm": "^9.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
