--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.9.2",
+    "apollo-server-express": "^3.12.0",
     "bcrypt": "^5.1.1",
+    "express": "^4.18.2",
+    "graphql": "^16.8.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.5",
     "nodemon": "^3.0.1"
   }
 }
