--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cloudinary-react": "^1.8.1",
     "dayjs": "^1.11.9",
     "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
