--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.1",
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.11.2",
     "@stripe/stripe-js": "^2.1.0",
     "apollo-server": "^3.12.0",
     "apollo-server-express": "^3.12.0",
