--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss": "^8.4.28",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "url": "^0.11.1"
   }
 }
