--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.40.0",
+    "cloudinary-core": "^2.13.0",
     "nodemon": "^3.0.1"
   }
 }
