--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.4",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.28",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
