--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.40.0",
     "cloudinary-core": "^2.13.0",
+    "graphql-upload": "^16.0.2",
     "nodemon": "^3.0.1"
   }
 }
