--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^7.4.5",
     "cloudinary": "^1.40.0",
     "cloudinary-core": "^2.13.0",
+    "graphql-upload": "^16.0.2",
     "nodemon": "^3.0.1"
   }
 }
