--- a/server/package.json
+++ b/server/package.json
@@ -15,18 +15,14 @@
     "@apollo/server": "^4.9.2",
     "apollo-server-express": "^3.12.0",
     "bcrypt": "^5.1.1",
-
     "cloudinary": "^1.40.0",
     "cloudinary-core": "^2.13.0",
-    "graphql-upload": "^16.0.2",
-
     "express": "^4.18.2",
     "graphql": "^16.8.0",
+    "graphql-upload": "^16.0.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.5",
-    "cloudinary": "^1.40.0",
-    "cloudinary-core": "^2.13.0",
-    "graphql-upload": "^16.0.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "store": "^2.0.12"
   }
 }
