--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,7 @@
     "mongoose": "^7.4.5",
     "nodemon": "^3.0.1",
 
-    "stripe": "^13.4.0"
+    "stripe": "^13.4.0",
 
     "store": "^2.0.12"
 
