--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "### Project Description: eCommerceX - Empowering Online Clothing Sales",
   "main": "index.js",
+  "engines": {
+    "node": "18.17.0"
+  },
   "scripts": {
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
