changing package json

--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "proxy": "http://localhost:3001",
   "private": true,
+  "engines": {
+    "node": "18.17.1"
+  },
   "dependencies": {
     "@apollo/client": "^3.8.1",
     "@stripe/stripe-js": "^2.1.1",
